# kagami

./: .gitignore  CITATION.cff  LICENSE  README.md  dummy.txt  dummy3.txt  dummy4.txt  paper.bib  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  build.sh  chatbot_logic.py  common.py  download_models.py  download_nltk_data.py  drive_upload.py  formality_model_setup.py  main.py  nltk_bootstrap.py  nltk_setup.py  pyproject.toml  requirements.txt  spacy_setup.py
backend/core/: config.py  logging_service.py  models.py  nlp_service.py  prompt_service.py  utils.py
backend/experiment_logs/: participant_01_0c724037-53f3-4771-8d5f-2526dd1cf452.jsonl  participant_01_0c961657-1040-4dd1-ba8f-8d10d901944c.jsonl  participant_01_0ff989a6-708c-439b-9ed9-c203435df827.jsonl  participant_01_0fffbe5e-1e6c-4d8b-99f7-eca95748b415.jsonl  participant_01_1079f232-5978-4687-a76c-3fe503d2f666.jsonl  participant_01_10d49d6c-c0a3-40da-8c40-16c5def38467.jsonl  participant_01_176dd310-9567-4802-8a00-081e34d49711.jsonl  participant_01_19b9379a-dd8c-42ab-843e-884fe1dcc2ec.jsonl  participant_01_24d82c19-7de9-47ef-adc3-dc7dd5427969.jsonl  participant_01_319a3d0b-8b9f-4278-a15d-a553c772d459.jsonl  participant_01_3992752b-e12b-4250-aca5-f42a24346cbd.jsonl  participant_01_39cbb8f6-2c93-4366-a2dd-eb7f1fd72ade.jsonl  participant_01_41addd38-2a91-4bc0-bb8d-c6c2221f7ab9.jsonl  participant_01_502a8ba2-f526-4d28-969f-62df7aed3142.jsonl  participant_01_56e9ee78-8248-4e64-8d39-348fc674d57c.jsonl  participant_01_5d2267bf-c259-4b6b-b581-fd0a1e5356de.jsonl  (+36 more)
backend/logs/: abc123_log.json
(+52 files in other folders)
